# binance_connect

./: .env  .env_examples  .gitignore  main_v2.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
patterns/: __init__.py  pinbar.py  rails.py
src/: __init__.py  candlestick_finder.py  dataframe_handlers.py  google_sheets.py  main.py  models.py  send_messages.py  tg_bot.py
tests/: conftest.py  history_bad_klines.json  history_klines.json  test_create_frames.py  test_patter_rails.py  test_patterns.py
